# Exercicios_de_aprendizado

./: pyproject.toml
.trunk/: trunk.yaml
src/: matching_brackets.py  pythagorean_triplet.py
src/exercicios_de_aprendizado/: Exercício_3.py  Exercício_4.py  Exercício_5.py  Exercício_7.py  Exercício_9.py  acronym.py  complex_numbers.py  exercicio_1.py  exercicio_3.py  exercise_1.py  exercise_10.py  exercise_11.py  exercise_12.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  exercise_8.py  exercise_9.py  highly_divisible_triangular_number.py  largest_productin_a_grid.py  matching_brackets.py  matching_brackets_recursivo.py  pig_latin.py  prime.py  prime_factors.py  pythagorean_triplet.py  rational_numbers.py  rotational_cipher.py  say.py  series.py  summation_of_primes.py
tests/: summation_of_primes.py  test_acronym.py  test_complex_numbers.py  test_exercicio_1.py  test_exercise_1.py  test_exercise_10.py  test_exercise_11.py  test_exercise_12.py  test_exercise_3.py  test_exercise_4.py  test_exercise_5,py  test_exercise_5.py  test_exercise_6.py  test_exercise_7.py  test_exercise_8.py  test_exercise_9.py  test_highly_divisible_triangular_number.py  test_largest_productin_a_grid.py  test_matching_brackets.py  test_matching_brackets_recursivo.py  test_pig_latin.py  test_prime.py  test_prime_factors.py  test_pythagorean_triplet.py  test_rational_numbers.py  test_rotational_cipher.py  test_rotational_numbers  test_say.py  test_series.py  test_summation_of_primes.py
