[project]
name = "exercicios-de-aprendizado"
version = "0.1.0"
description = ""
authors = [
    {name = "beatrizribeiro.milli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-profiling = "^1.8.1"
snakeviz = "^2.2.2"
mypy = "1.15"
radon = "5.1"

